@@ -1,30 +1,4 @@
-var hash =  {}
-
-function saveHash() {
-    var s = ""
-    for (var key in hash) {
-        if (s.length) {
-            s += '&';
-        }
-        s += key + '=' + hash[key];
-    }
-    window.location.hash = s;
-}
-
-function loadHash() {
-    if (window.location.hash.length == 0) {
-        return;
-    }
-    var items = window.location.hash.substring(1).split('&');
-    for (var i = 0; i < items.length; i++) {
-        var item = items[i].split('=');
-        hash[item[0]] = item[1];
-    }
-}
-
 $(document).ready(function() {
-
-    loadHash();
 
     function loadContent(url) {
         $('#smart-view-content').html('<img src="++resource++faceted_images/ajax-loader.gif" />');
@@ -39,8 +13,9 @@ $(document).ready(function() {
         e.preventDefault();
         var template = $(this).attr('href');
         loadContent(template);
-        hash['template'] = template;
-        saveHash();
+        $.bbq.pushState({
+            'template': template
+        });
     });
 
     // Also handle click on any batch bar that will pop up
@@ -49,8 +24,15 @@ $(document).ready(function() {
         loadContent($(this).attr('href'));
     });
 
-    if ('template' in hash) {
-        $('#smart-view-switch a[href=' + hash['template'] + ']').click();
-    }
+    $(window).bind('hashchange', function(e) {
+        console.log($.bbq);
+        console.log($.bbq.getState('template'));
+        var template = $.bbq.getState('template');
+        if (template) {
+            $('#smart-view-switch a[href=' + template + ']').click();
+        }
+    });
+
+   $(window).trigger('hashchange'); 
 
 });
